# Backuppy

./: .codecov.yaml  .dumpversion.cfg  .readthedocs.yaml  README.md  pyproject.toml  requirements.txt  test.py
docs/: conf.py
docs/_build/rinoh/: backuppy.stylelog
docs/_build/rinoh/.doctrees/: environment.pickle  index.doctree
docs/source/: conf.py  index.rst
src/: test.py
