[build-system]
build-backend = "flit_core.buildapi"
requires = [
    "flit_core >=3.4,<4",
    "importlib_metadata>=0.7; python_version < '3.8'",
]


[project]
name = "Backuppy"
description = "Tools for automatic backup n"
authors = [
    {name = "Tom Mauger-Birocheau"}
]
maintainers = [
    {name = "Tom Mauger-Birocheau", email = "tom.mauger-birocheau@etu.univ-cotedazur.fr"}
]
urls.Documentation = ""
urls.Source = "https://github.com/TomMB45/Backuppy"
urls.Home-page = "https://github.com/TomMB45/Backuppy"
version = "0.0.1"
requires-python = ">=3.8"
readme = "README.md"
dependencies = [
    "tkinter", 
    "os",
    "shutil",
    ]

[project.optional-dependencies]
dev = [
    # dev version generation
    "bump2version",
]
doc = [
    "sphinx>=4",
    "furo",
    "myst-parser",
    "sphinxcontrib-bibtex>=1.0.0",
    # For notebooks
    "nbsphinx",
    "ipython>=8.3.0"
]
test = [
    "pytest",
    "pytest-cov",
]
